# youtube_rss

./: .gitignore  .pre-commit-config.yaml  README.md  command_line_parser.py  config.py  db.py  pyproject.toml  tui.py  utils.py  youtube_rss.py
tests/: conftest.py  test_db.py  test_parser.py  test_youtube_rss.py
youtube_rss/: __main__.py  command_line_parser.py  config.py  db.py  output.py  parser.py  tui.py  utils.py  youtube_rss.py
youtube_rss/ui/: __init__.py  base.py  tui.py
